完善界面效果，提高用户体验度

--- a/news_v2/web/admin/css/home.css
+++ b/news_v2/web/admin/css/home.css
@@ -3,15 +3,15 @@
     padding: 0;
 }
 .top {
-    border: 2px solid #616dff;
+    border-bottom: 2px solid #616dff;
 }
-.nav{
-    height: 90%;
+/*.nav{
+    !*height: 90%;*!
     border: 2px solid #616dff;
-}
+}*/
 .content{
-    height: 90%;
-    border: 2px solid #616dff;
+    height: 80%;
+    border-left: 2px solid #616dff;
 }
 .bottom{
     border: 2px solid #616dff;
@@ -26,5 +26,5 @@
     text-align: center;
 }
 .path{
-    border: 2px solid #616dff;
+    border-bottom: 2px solid #616dff;
 }
