--- a/news_v1/web/admin/css/home.css
+++ b/news_v1/web/admin/css/home.css
@@ -3,18 +3,18 @@
     padding: 0;
 }
 .top {
-    border: 2px solid #616dff;
+    border-bottom: 2px solid #616dff;
 }
 .nav{
-    height: 90%;
-    border: 2px solid #616dff;
+    /*height: 90%;*/
+    /*border: 2px solid #616dff;*/
 }
 .content{
-    height: 90%;
-    border: 2px solid #616dff;
+    /*height: 90%;*/
+    border-left: 2px solid #616dff;
 }
 .bottom{
-    border: 2px solid #616dff;
+    border-top: 2px solid #616dff;
 }
 .col-center-block{
     float: none;
@@ -26,5 +26,5 @@
     text-align: center;
 }
 .path{
-    border: 2px solid #616dff;
+    border-bottom: 2px solid #616dff;
 }
